# ls-1x

./: .env  .env_template  .gitignore  README.md  app.py  delete_ended_matches.py  delete_rows.py  fetch_matches.py  load_data_from_file.py  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
devops/: deploy.sh
horus/: 1xservice.py  apis.py  config.py  custom_logger.py  enums.py  json_server.py  utils.py
pages/: x1.py  x8.py
systemds/: 1xbet.clean.service  1xbet.service
tmp/: matches.json
